# talk-desktop

./: .gitignore  CMakeLists.txt  README.md  Readme.md  harbour-nextcloud-talk.desktop  harbour-nextcloud-talk.pro  org.nextcloud.talk.appdata.xml  org.nextcloud.talk.desktop  sfos-nextcloud-login-flow-demo.desktop  sfos-nextcloud-login-flow-demo.pro
events/: nextcloud_talk_im.ini
kirigami-qml/: RoomDrawer.qml  main.qml  res.qrc
kirigami-qml/ChatBox/: AttachmentPane.qml  ChatBar.qml  ChatBox.qml  CompletionMenu.qml  ReplyPane.qml
kirigami-qml/components/: ColorScheme.qml  DBusHandler.qml  EmojiPicker.qml  ImageDelegate.qml  TextDelegate.qml  TimelineContainer.qml
kirigami-qml/cover/: CoverPage.qml
kirigami-qml/pages/: Accounts.qml  AccountsPage.qml  AddAccounts.qml  AppearanceSettingsPage.qml  GeneralSettingsPage.qml  LegacyAddAccount.qml  SettingsPage.qml
notificationcategories/: x-nextcloud.talk.im.conf
qml/: harbour-nextcloud-talk.qml  sfos-nextcloud-login-flow-demo.qml
qml/components/: Avatar.qml  ConversationIcon.qml  FilePreview.qml
qml/lib/: Config.js  NcAuth.js  package-lock.json
qml/pages/: Accounts.qml  LegacyAddAccount.qml  LoginPage.qml
rpm/: harbour-nextcloud-talk.changes.in  harbour-nextcloud-talk.changes.run.in  harbour-nextcloud-talk.spec  harbour-nextcloud-talk.yaml  sfos-nextcloud-login-flow-demo.changes.in  sfos-nextcloud-login-flow-demo.changes.run.in  sfos-nextcloud-login-flow-demo.yaml
src/: CMakeLists.txt  accountmodel.cpp  accountmodel.h  accountreader.cpp  accountreader.h  chat.cpp  chat.h  chat.h.autosave  chatboxhelper.cpp  db.cpp  db.h  discovery.cpp  discovery.h  discoveryrun.cpp  discoveryrun.h  harbour-nextcloud-talk.cpp  kirigami-nextcloud-talk.cpp  main.cpp  messageeventmodel.cpp  messageeventmodel.h  ncauth.cpp  ncauth.h  ncauthnamf.cpp  ncauthnamf.h  ncauthnetworkaccessmanager.cpp  ncauthnetworkaccessmanager.h  nextcloudaccount.cpp  nextcloudaccount.h  room.cpp  room.h  roomlistfilter.cpp  roomservice.cpp  roomservice.h  sfos-nextcloud-login-flow-demo.cpp  talkconfig.kcfgc  talkconfig.moc_parameters  utils.h  windoweffects.cpp  windoweffects.h
src/constants/: ConversationTypeClass.cpp  ConversationTypeClass.h  PresenceStatusClass.cpp  PresenceStatusClass.h  systemmessagetype.cpp  systemmessagetype.h
src/desktop/: clipboard.h  download.cpp  download.h
src/models/: accountmodel.cpp  accountmodel.h  messageeventmodel.cpp  messageeventmodel.h  participantmodel.cpp  participantmodel.h  roomlistfilter.cpp  roomlistfilter.h  roomlistmodel.cpp  roomlistmodel.h
src/providers/: abstractnextcloudimageprovider.cpp  abstractnextcloudimageprovider.h  avatarprovider.cpp  avatarprovider.h  previewprovider.cpp  previewprovider.h
src/sailfish/: download.cpp  download.h  notifications.cpp  notifications.h
src/services/: accounts.cpp  accounts.h  capabilities.cpp  capabilities.h  download.cpp  download.h  knotifications.h  notifications.cpp  notifications.h  participants.cpp  participants.h  requestfactory.cpp  requestfactory.h  secrets.cpp  secrets.h
translations/: harbour-nextcloud-talk-de.ts  harbour-nextcloud-talk.ts  sfos-nextcloud-login-flow-demo-de.ts  sfos-nextcloud-login-flow-demo.ts
(+10 files in other folders)
